2001-07-06  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* changed VERSION and all Makefiles using it, in order to include a version
	status saying that the binaries are build from a cvs tree and not from a final
	version.

	* fixed a few bugs in readsf~/writesf~

2001-07-02  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* updated doc
	   - simplified header with new icon
	   - updated DSP object development page

	* added doxygen doc to sched.h and dsp.h (updated doxygen config file)

	* added dspgraph.h and audio.h

	* updated dsp.c, dspgraph.c and audio.c
	   - encapsulated dsp graph to a structure fts_dsp_graph_t and added corresponding API
	   - added fts_dsp_get_time()

	* updated sched.c
	   - added clock and status to the scheduler
	   - added fts_get_time()

	* updated time.c 
	   - removed named clocks
	   - changed API for fts_clock_t
	   - changed API for fts_alarm_t

	* added sample pool to signal package (not yet used in an object)

	* added play~ for fvec or bpf and rec~ for fvec to signal package

	* removed classes clock and at (from ispw package)
	
	* added error posting to alsarawmidiport, alsaaudioport and ossaudioport

2001-06-27  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* moved fts/src/runtime/client/protcodec.c code to udpsend and udpreceive objects.

	* removed include/fts/runtime/client/protcodec.h

2001-06-15  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* added automatic track naming to MIDI file import of the sequence class

	* added fvec abd bpf player to signal package (to be completed)

	* new splash screen
	   - adapted Java code) 
	   - changed "jMax version" string to "release"
	
	* new icon (images/jmax_icon.gif)

2001-06-13  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* remove Fts standard error window and move FTS standard error to a
	file ($HOME/.fts-stderr).

	* fixed audioport bug (null audioport was not instanciated, resulting in
	100% CPU)

2001-06-05  Francois Dechelle  <dechelle@lipari.ircam.fr>
