@@ -1,5 +1,7 @@
 2001-07-06  Francois Dechelle  <dechelle@lipari.ircam.fr>
 
+	* fixed watchdogs not exiting on FTS crash
+
 	* changed VERSION and all Makefiles using it, in order to include a version
 	status saying that the binaries are build from a cvs tree and not from a final
 	version.
